noinst_LIBRARIES = libguigtkmm.a

INCLUDES = -I$(top_srcdir)

libguigtkmm_a_SOURCES = \
                        CameraControl.cpp CameraControl.h \
                        EntityImportOptions.cpp EntityImportOptions.h \
                        EntityExportOptions.cpp EntityExportOptions.h \
                        OptionBox.cpp OptionBox.h \
                        DockWindow.cpp DockWindow.h
