noinst_LIBRARIES = libguigtkmm.a

INCLUDES = -I$(top_srcdir)

libguigtkmm_a_SOURCES = \
                        OptionBox.cpp OptionBox.h \
                        CameraControl.cpp CameraControl.h \
                        Cal3dStoreOptions.cpp Cal3dStoreOptions.h \
                        EntityTree.cpp EntityTree.h \
                        EntityImportOptions.cpp EntityImportOptions.h \
                        EntityExportOptions.cpp EntityExportOptions.h \
                        TypeTree.cpp TypeTree.h \
                        DockWindow.cpp DockWindow.h
