noinst_LIBRARIES = libguigtkmm.a

INCLUDES = -I$(top_srcdir)

libguigtkmm_a_SOURCES = \
                        ImportTypesWizard.cpp ImportTypesWizard.h \
                        OptionBox.cpp OptionBox.h \
                        CameraControl.cpp CameraControl.h \
                        Cal3dStoreOptions.cpp Cal3dStoreOptions.h \
                        ChatWindow.cpp ChatWindow.h \
                        PanelNotebook.cpp PanelNotebook.h \
                        EntityTree.cpp EntityTree.h \
                        EntityImportOptions.cpp EntityImportOptions.h \
                        EntityExportOptions.cpp EntityExportOptions.h \
                        TypeTree.cpp TypeTree.h \
                        DockWindow.cpp DockWindow.h
